[package]
name = "rusty_tiktok_bot"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/yuvlian"]

[dependencies]
lazy_static = "1.4.0"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_yml = "0.0.10"
serenity = "0.12.2"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
