[package]
name = "qingquembed"
version = "1.3.0"
edition = "2021"
authors = ["Yulian - https://github.com/yuvlian"]

[dependencies]
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_yml = "0.0.10"
serenity = "0.12.2"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
